refactor(ms-bucket-adapter): update S3Controller upload to accept JSON body with content
